alteracoes na index

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <div class="cards">
 
         <div id="card1">
-            <div id="rainho"><img src="./css/rainho.svg" alt="desenho raio"></div>
+            <div id="rainho"><img src="./css/rainho.svg" alt="desenho de um raio"></div>
             <p>Sobre</p>
         </div>
 
