adicao de alt em img

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 
           <div id="card2">
-            <div id="folha"><img src="./css/verde.svg" alt="desenho folha"></div>
+            <div id="folha"><img src="./css/verde.svg" alt="desenho de uma folha"></div>
             <p>Contato</p>
           </div>
 
